# origin_vision_test

./: CMakeLists.txt
assets/: yolov5_0526.xml
calibration/: calibrate_camera_chessboard.cpp  calibrate_chessboard_handeye.cpp  capture_chessboard.cpp
configs/: ascento.yaml  calibration_chessboard.yaml  demo.yaml  example.yaml  hero.yaml  mvs.yaml  sentry.yaml  standard3.yaml  standard4.yaml  uav.yaml
docs/: origin_vision_new_update_audit.md
io/: CMakeLists.txt  cboard.cpp  cboard.hpp  command.hpp  ovgimbal.cpp  ovgimbal.hpp
io/ros2/: ros2_gimbal.cpp  ros2_gimbal.hpp
io/usbcamera/: usbcamera.cpp  usbcamera.hpp
src/: auto_buff_debug.cpp  mt_auto_aim_debug.cpp  mt_standard.cpp  ovgimbal_auto_aim_test.cpp  ovgimbal_mpc.cpp  ovsentry_auto_aim_test.cpp  ovsentry_mpc.cpp  ovsentry_omni.cpp  sentry.cpp  sentry_bp.cpp  sentry_debug.cpp  sentry_multithread.cpp  standard.cpp  uav.cpp  uav_debug.cpp
tasks/auto_aim/: aimer.cpp  armor.hpp  shooter.cpp  shooter.hpp  solver.cpp  tracker.cpp  yolo.cpp  yolo.hpp
tasks/auto_aim/multithread/: commandgener.cpp  commandgener.hpp
tasks/auto_aim/yolos/: yolo11.cpp  yolo11.hpp  yolov5.cpp  yolov5.hpp  yolov8.cpp  yolov8.hpp
tasks/omniperception/: decider.cpp  decider.hpp  detection.hpp  perceptron.cpp  perceptron.hpp
tests/: minimum_vision_system.cpp
tools/: thread_safe_queue.hpp
